Change Log

2009-05-22
	Moved "define-match.scm" to "matcher.scm".
	Renamed DEFINE-MATCH to DEFINE-MATCHER, added LET-MATCHER syntax
	to matcher package. Extended matchers so that 'SYMBOL matches a
	literal symbol. (lib/matcher.scm)
	Improved rendering of (cond (p => x)) in pretty printer.
	(contrib/pretty-print.scm)
	Applied various cosmetics.
2009-05-21
	Added STRING-UPCASE and STRING-DOWNCASE procedures.
	(lib/string-case.scm)
2009-05-20
	Simplified HASH-TABLE procedures. (lib/hash-table.scm)
2009-05-17
	Included help pages for ALL procedures of the extension
	library! Just try (load-from-library "draw-tree") and
	then (help 'draw-tree).
	LOAD-FROM-LIBRARY now attaches a ".scm" suffix, if the
	given file cannot be located, i.e., you can write
	(load-from-library "foo") instead of (... "foo.scm").
	Tweaked the image dump/load routines.
	Fixed a (self-made) bug in FORMAT (~A would slashify output).
2009-05-16
	Fix: made strings returned by SYMBOL->STRING immutable.
	Updated the help pages.
	Prepared comments in library files for automatic generation
	of help pages. (Stay tuned.)
2009-05-14
	Added code to grow the memory pools when loading large images.
	Added interpreter tag to magic header (images are not portable).
	Added another tweak for POSIX compatibility.
2009-05-13
	Administrative:
	- Removed all those special variables ($@, $<, ...)
	  from Makefile, because some(?) of them are simply
	  not portable.
	- Added -Dunix to compilation of unix.c (sic!).
2009-05-12
	Applied some cosmetics to s9.scm.
	Administrative: fixed local environment in the build process.
2009-05-11
	Fix: PRINT-CODE handled QUOTE inside of QUASIQUOTE incorrectly.
	(contrib/print-code.scm)
	Fixed a bug that resulted in multiple evaluation of DELAYed
	expressions.
2009-05-10
	Minor fix: protected car(x) in syntax_object_p().
	Cosmetics.
	Changed allocation strategy. We will now use half of the
	memory pool at most. OK, this gives us the same space