@@ -1,5 +1,9 @@
 Change Log
 
+2009-05-23
+	Improved the documentation of the matcher package.
+	Removed unused list_of_symbols() function from "s9.c".
+	Thanks, Masaru KIMURA (via your downstream repository)
 2009-05-22
 	Moved "define-match.scm" to "matcher.scm".
 	Renamed DEFINE-MATCH to DEFINE-MATCHER, added LET-MATCHER syntax
